--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML and CSS Tasks</title>
-    <link rel="stylesheet" href="../CSS/Task1.css">
-    <link rel="stylesheet" href="../CSS/Task2.css">
-    <link rel="stylesheet" href="../CSS/Task3.css">
-    <link rel="stylesheet" href="../CSS/Task4.css">
-    <link rel="stylesheet" href="../CSS/Task5.css">
-    <link rel="stylesheet" href="../CSS/Task6.css">
-    <link rel="stylesheet" href="../CSS/Task7.css">
+    <title>BS and JS Tasks</title>
     <style>
         table {
             width: 80%;
