--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <table>
         <tr>
-            <th colspan="2" style="text-align: center;">HTML & CSS Tasks</th>
+            <th colspan="2" style="text-align: center;">BS & JS Tasks</th>
         </tr>
         <tr>
             <th>Task Number</th>
